[gd_scene load_steps=11 format=3 uid="uid://dpdnxixbp6ccs"]

[ext_resource type="Script" uid="uid://b4i5otf247gjc" path="res://prefabs/player_trap.gd" id="1_f4mn6"]
[ext_resource type="Material" uid="uid://c78qtajuqw7dr" path="res://prefabs/objects/player_trap/player_trap.tres" id="2_f4mn6"]

[sub_resource type="BoxShape3D" id="BoxShape3D_qscck"]
size = Vector3(1.5, 1.5, 1.5)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_f4mn6"]

[sub_resource type="Curve" id="Curve_pvt0c"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_psxt3"]
curve = SubResource("Curve_pvt0c")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ru07h"]
particle_flag_align_y = true
spread = 90.0
initial_velocity_min = 12.0
initial_velocity_max = 14.0
scale_min = 0.5
scale_max = 1.5
scale_curve = SubResource("CurveTexture_psxt3")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yp45b"]
albedo_color = Color(0.498039, 0, 1, 1)
metallic = 1.0
roughness = 0.0
emission_enabled = true
emission = Color(0.498039, 0, 1, 1)
emission_energy_multiplier = 16.0

[sub_resource type="CylinderMesh" id="CylinderMesh_uwy26"]
material = SubResource("StandardMaterial3D_yp45b")
top_radius = 0.1
bottom_radius = 0.05
height = 1.0
radial_segments = 4
rings = 1

[sub_resource type="PlaneMesh" id="PlaneMesh_pvt0c"]
material = ExtResource("2_f4mn6")
size = Vector2(1, 1)

[node name="trap" type="Area3D" groups=["player_trap"]]
collision_layer = 4096
collision_mask = 64
script = ExtResource("1_f4mn6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.614777, 0, 0, 0, 0.614777, 0, 0, 0, 0.614777, 0, 0, 0)
shape = SubResource("BoxShape3D_qscck")

[node name="area3d_trap_circle" type="Area3D" parent="."]
collision_layer = 4096
collision_mask = 64

[node name="CollisionShape3D" type="CollisionShape3D" parent="area3d_trap_circle"]
shape = SubResource("CylinderShape3D_f4mn6")

[node name="timer_find_enemy_in_area" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
emitting = false
amount = 24
one_shot = true
explosiveness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_ru07h")
draw_pass_1 = SubResource("CylinderMesh_uwy26")

[node name="timer_remove_object" type="Timer" parent="."]
one_shot = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_pvt0c")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_color = Color(0.498039, 0, 1, 1)
light_energy = 2.0
light_volumetric_fog_energy = 15.0
light_size = 1.0
omni_range = 2.0
omni_attenuation = 1.02

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="timer_find_enemy_in_area" to="." method="_on_timer_find_enemy_in_area_timeout"]
[connection signal="timeout" from="timer_remove_object" to="." method="_on_timer_remove_object_timeout"]
